[project]
name = "tdnet-disclosure-mcp"
version = "0.1.1"
description = "MCP server for TDNET timely disclosures (適時開示) - earnings, dividends, M&A, buybacks"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["tdnet", "disclosure", "mcp", "jpx", "japan", "timely-disclosure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastmcp>=2.0,<3.0",
    "click>=8.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
tdnet-disclosure-mcp = "tdnet_disclosure_mcp.cli:cli"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/tdnet-disclosure-mcp"
Repository = "https://github.com/ajtgjmdjp/tdnet-disclosure-mcp"
Issues = "https://github.com/ajtgjmdjp/tdnet-disclosure-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".mcpregistry_*", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/tdnet_disclosure_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
allowed-confusables = ["〔", "〕", "（", "）"]

[tool.ruff.lint.isort]
known-first-party = ["tdnet_disclosure_mcp"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["tdnet_disclosure_mcp"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: marks tests that make real network calls"]
